--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.17.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <defaultGoal>package</defaultGoal>
