--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,6 @@
         <!-- Main class -->
         <mainClass>program.Main</mainClass>
 
-        <!-- Maven teszt fázis futtatás kikapcsolása-->
-        <maven.test.skip>true</maven.test.skip>
-
         <!-- JavaFX futtatás argumentumok -->
         <runfx.args>-jar "${project.build.directory}/${project.build.finalName}.jar"</runfx.args>
 
@@ -117,6 +114,31 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.openclover</groupId>
+                <artifactId>clover-maven-plugin</artifactId>
+                <version>4.2.0</version>
+                <configuration>
+                    <targetPercentage>10%</targetPercentage>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>verify</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>instrument</goal>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>pre-site</id>
+                        <phase>pre-site</phase>
+                        <goals>
+                            <goal>instrument</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.1.0</version>
@@ -165,5 +187,22 @@
             </plugin>
         </plugins>
     </build>
-
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.21.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.openclover</groupId>
+                <artifactId>clover-maven-plugin</artifactId>
+                <version>4.2.0</version>
+                <configuration>
+                    <generatePdf>true</generatePdf>
+                    <generateHtml>true</generateHtml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
